Fixed some spacing and sizing issues on the home page.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,47 @@
+a {
+  text-align: center;
+}
 h1 {
+  font-size: 300%;
   font-family: arial;
   text-align: center;
   color: #525252;
+}
+#top {
+  display: flex;
+  background-color: #525252;
+  width: 60%;
+  height: 3px;
+  margin-top: -1%;
 }
 h4 {
+  font-size: 120%;
   font-family: arial;
   text-align: center;
   color: #525252;
 }
+
+.container{
+  display: flex;
+  justify-content: space-around;
+  margin-right: 8%;
+  margin-left: 8%;
+}
+
+.mainContainer{
+  width: 80%;
+  margin: auto;
+  margin-bottom: 32px;
+  margin-top: 32px;
+}
+
+.containerImage{
+  display: flex;
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 .button {
  background-color: #55d9d4;
  border-radius: 50%;
@@ -17,111 +51,30 @@ h4 {
  padding: 60px 10px;
  text-decoration: none;
  cursor: pointer;
- position: absolute;
- margin-top: -60;
- left: 90;
 }
 .button:hover {
- background-color: Orange;
- padding: 70px 20px;
- position: absolute;
- margin-left: -10;
- margin-top: -70;
+ background-color: orange;
 }
-.button2 {
- background-color: #55d9d4;
- border-radius: 50%;
- font-size: 16px;
- color: #525252;
- font-family: arial;
- padding: 60px 10px;
- text-decoration: none;
- cursor: pointer;
- position: absolute;
- margin-top: -60;
- right: 90;
-}
-.button2:hover {
- background-color: Orange;
- padding: 70px 20px;
- position: absolute;
- margin-right: -10;
- margin-top: -70;
-}
-.button3 {
- background-color: #55d9d4;
- border-radius: 50%;
- font-size: 16px;
- color: #525252;
- font-family: arial;
- padding: 60px 9px;
- text-decoration: none;
- cursor: pointer;
- position: absolute;
- margin-top: 180;
- left: 88;
-}
-.button3:hover {
- background-color: Orange;
- padding: 70px 20px;
- position: absolute;
- margin-left: -11;
- margin-top: 170;
-}
-.button4 {
- background-color: #55d9d4;
- border-radius: 50%;
- font-size: 16px;
- color: #525252;
- font-family: arial;
- padding: 60px 9px;
- text-decoration: none;
- cursor: pointer;
- position: absolute;
- right: 86;
- margin-top: 180;
-}
-.button4:hover {
- background-color: Orange;
- padding: 70px 20px;
- position: absolute;
- margin-right: -11;
- margin-top: 170;
-}
-#home {
- position: absolute;
- margin-left: 116;
- margin-top: -32;
- color: #525252;
-}
+
 #rect {
   background-color: #525252;
-  width: 472px;
+  width: 100%;
   height: 10px;
-  position: absolute;
-  margin-top: 100;
 }
 #rect2 {
   background-color: #525252;
-  width: 472px;
+  width: 100%;
   height: 10px;
-  position: absolute;
-  margin-top: 150;
 }
 #rect3 {
   background-color: #525252;
-  width: 213px;
+   width: 100%;
   height: 25px;
-  position: absolute;
-  margin-top: 118;
 }
 #rect4 {
   background-color: #525252;
-  width: 217px;
+  width: 100%;
   height: 25px;
-  position: absolute;
-  margin-top: 118;
-  margin-left: 255;
 }
 #triangle {
 	width: 0;
@@ -129,9 +82,6 @@ h4 {
 	border-top: 0px solid transparent;
 	border-left: 30px solid #525252;
 	border-bottom: 25px solid transparent;
-	position: absolute;
-	margin-top: 118;
-	margin-left: 213;
 }
 #triangle2 {
 	width: 0;
@@ -139,9 +89,6 @@ h4 {
 	border-top: 25px solid transparent;
 	border-right: 30px solid #525252;
 	border-bottom: 0px solid transparent;
-	position: absolute;
-	margin-top: 118;
-	margin-left: 225;
 }
 
 #bio {
